force-app/main/default/objects/TimeEntry__c/TimeEntry__c.object-meta.xml
<CustomObject>
    <description>An individual time entry as unit of work that can be invoiced.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>{YYYYMMDD}-{000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>