force-app/main/default/objects/TimeEntry__c/fields/Billable_Hours_Correction__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Correction__c</fullName>
    <inlineHelpText>In order to correct the billable hours, hours can be entered here. A value with a minus reduces the billable hours.</inlineHelpText>
    <label>Billable Hours Correction</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>