force-app/main/default/objects/TimeEntry__c/fields/CustomerApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerApprovalStatus__c</fullName>
    <description>Optional approval status for customers that manually approve their time entries.</description>
    <inlineHelpText>Status of customer&apos;s approval. Empty, if customer did not accept or reject.</inlineHelpText>
    <label>Customer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>