force-app/main/default/objects/TimeEntry__c/fields/Duration_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Hours__c</fullName>
    <description>Calculated duration in decimal hour format (3 hours 30 minutes = 3,5)</description>
    <formula>(End__c - Start__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated duration</inlineHelpText>
    <label>Duration in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>