force-app/main/default/objects/TimeEntry__c/fields/MemberDailyRate__c.field-meta.xml
<CustomField>
    <fullName>MemberDailyRate__c</fullName>
    <formula>Project_Team_Member__r.Project_Daily_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MemberDailyRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>