force-app/main/default/objects/TimeEntry__c/fields/Project_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Member</label>
    <referenceTo>Project_Team_Member__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>