force-app/main/default/objects/TimeEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Task__c</columns>
    <columns>Project_Team_Member__c</columns>
    <columns>Status__c</columns>
    <columns>Duration_in_Hours__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>