force-app/main/default/objects/TimeEntry__c/listViews/All_Approved_Time_Entries_Not_Billed.listView-meta.xml
<ListView>
    <fullName>All_Approved_Time_Entries_Not_Billed</fullName>
    <columns>NAME</columns>
    <columns>Project_Task__c</columns>
    <columns>Project_Team_Member__c</columns>
    <columns>Status__c</columns>
    <columns>Duration_in_Hours__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All Approved Time Entries Not Billed</label>
</ListView>