force-app/main/default/objects/TimeEntry__c/listViews/All_New_Time_Entries.listView-meta.xml
<ListView>
    <fullName>All_New_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Project_Task__c</columns>
    <columns>Project_Team_Member__c</columns>
    <columns>Status__c</columns>
    <columns>Duration_in_Hours__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All New Time Entries</label>
</ListView>